[package]
name = "serde_serializer_quick_unsupported"
version = "0.1.2"
edition = "2021"
description = "Helper for implementing a serializer that supports a reduced subset of the serde data model"
authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
repository = "https://github.com/Ten0/vec_storage_reuse"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = "1"